# TensorRay

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  TensorRay.cpp  TensorRay_debug.cpp  TensorVis.natvis
LibTensorRay/EDXUtil/Containers/: Algorithm.h  BlockedDimensionalArray.h  DimensionalArray.h
LibTensorRay/EDXUtil/Core/: Assertion.h  Memory.h  Random.h  Types.h
LibTensorRay/EDXUtil/Graphics/: BaseCamera.cpp  BaseCamera.h  Color.cpp  Color.h  ObjMesh.cpp  ObjMesh.h  Texture.cpp  Texture.h
LibTensorRay/EDXUtil/Math/: BoundingBox.h  Constants.h  EDXMath.h  FFT.cpp  FFT.h  Matrix.cpp  Matrix.h  Ray.h  Vec2.h  Vec3.h  Vec4.h  VecBase.h  Vector.h
LibTensorRay/EDXUtil/Windows/: Base.h  Bitmap.cpp  Bitmap.h  Debug.cpp  Debug.h  Timer.h
LibTensorRay/Examples/: Example.h
LibTensorRay/Examples/InvRendering/: BunnyShadow.cpp  BunnyTexture.cpp  InvRenderingExamples.cpp  InvRenderingExamples.h  Optimizer.h
LibTensorRay/Examples/Validations/: CboxExample.cpp  ValidationExamples.cpp  ValidationExamples.h
LibTensorRay/Renderer/: AQ_distrb.h  BSDF.cpp  BSDF.h  Boundary.cpp  Boundary.h  BoundaryDirect.cpp  BoundaryIndirect.cpp  BoundaryPixel.cpp  BoundaryPrimary.cpp  Camera.cpp  Camera.h  Config.h  Diffuse.cpp  Diffuse.h  Distribution.cpp  Distribution.cu  Distribution.h  Edge.cpp  Edge.h  Integrator.cpp  Integrator.h  Light.cpp  Light.h  Microfacet.cpp  Microfacet.h  NEE.cu  NEE.cuh  Optix.cpp  Optix.h  ParticleTracer.cpp  ParticleTracer.h  PathTracer.cpp  PathTracer.h  PathTracerDebug.cpp  PathTracerDebug.h  Primitive.cpp  Primitive.h  Ray.cpp  Ray.h  Records.cpp  (+15 more)
LibTensorRay/Tensor/: CudaMath.h  PtrWrapper.h  TemplateExpression.h  Tensor.cpp  Tensor.cu  Tensor.h  TensorJitKernel.cuh  TensorKernels.cuh  jitify2.hpp
LibTensorRay/Test/: Test.cpp  Test.cuh  TestCuda.cu
docs/: components.rst  conf.py  core_compile.rst  core_intro.rst  index.rst  inverse_diff_render.rst  python_intro.rst  python_render.rst
example/inverse_rendering/: kitty_in_cbox.conf  kitty_in_cbox_diffuse.conf  kitty_in_cbox_diffuse_multi_pose.conf  kitty_in_cbox_multi_pose.conf  kitty_shape.conf  optimize.py  optimize_multi_pose.py  optimize_multi_view.py  optimize_single_view.py  preprocess_multi_pose.py  preprocess_multi_view.py  sphere_to_bunny.conf  sphere_to_cube.conf  triangle_in_cbox.conf  triangle_in_cbox_multi_pose.conf
example/validation/: aq_indirect_test.conf  aq_indirect_test2.conf  aq_indirect_test_2_bounces.conf  cbox_bunny.conf  cbox_conductor.conf  cbox_diffuse.conf  cbox_indirect_test.conf  four_triangles.conf  kitty_in_cbox.conf  multi_light.conf  multi_light2.conf  run_val_all.py  sphere_to_cube.conf  triangle_in_cbox.conf  triangles.conf  two_triangles.conf  validate_cpu.py  validate_gpu.py
pyTensorRay/: common.py  fwd.py  loss.py  multi_pose.py  multi_view.py  optimizer.py  parameter_manager.py  renderer_multi_pose.py  renderer_multi_view.py  renderer_single_view.py  utils.py
